--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -122,5 +122,16 @@
     <string name="login">Login</string>
     <string name="create_new_account">No account yet? Create one</string>
     <string name="delete">Delete</string>
+    <string name="mode_name">Mode name</string>
+    <string name="fast">Fast</string>
+    <string name="Slow">slow</string>
+    <string name="Medium">Medium</string>
+    <string name="high">High</string>
+    <string name="low">Low</string>
+    <string name="choose_time_of_mode">Choose time of mode</string>
+    <string name="description">Description</string>
+    <string name="minutes">minutes</string>
+    <string name="seconds">seconds</string>
+    <string name="set">set</string>
 
 </resources>
