--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -133,5 +133,6 @@
     <string name="minutes">minutes</string>
     <string name="seconds">seconds</string>
     <string name="set">set</string>
+    <string name="add_your_mode">Add your mode:</string>
 
 </resources>
