--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -11,10 +11,10 @@
     <string name="btn_reset_password">Zmień hasło</string>
     <string name="btn_send">Wyślij</string>
     <string name="btn_sign_out">Wyloguj</string>
-    <string name="cardio"></string>
+    <string name="cardio"/>
     <string name="change_email">zmień email</string>
     <string name="change_password">zmień hasło</string>
-    <string name="clear_board"></string>
+    <string name="clear_board"/>
     <string name="create_account">Utwórz konto</string>
     <string name="create_new_account">Nie masz konta? Utwórz je</string>
     <string name="email">Email</string>
@@ -30,10 +30,10 @@
     <string name="login">Login</string>
     <string name="mb_button">Start</string>
     <string name="minimum_password">Hasło musi zawierać minimum 6 znaków</string>
-    <string name="music_list">Lista z muzyką</string>
-    <string name="music_picker">Wybierz swoją muzykę</string>
+    <string name="music_list">Twoja muzyka</string>
+    <string name="choose_music">Wybierz swoją muzykę</string>
     <string name="name">Imię</string>
-    <string name="new_pass"></string>
+    <string name="new_pass"/>
     <string name="next_mode">NASTĘPNY TRYB</string>
     <string name="password">Hasło</string>
     <string name="remove_user">Usuń użytkownika</string>
