--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -171,5 +171,17 @@
     <string name="cancel">Cancel</string>
     <string name="good_bye">Thank, you! Good bye :-)</string>
     <string name="runner_icon_description">Runner icon</string>
+    <string name="next_interval_in">Next interval in:</string>
+    <string name="duration">Duration:</string>
+    <string name="tabata">tabata</string>
+    <string name="choose_a_file">Choose a file</string>
+    <string name="title">title</string>
+    <string name="intent_mode_name">modeName</string>
+    <string name="are_you_sure">Are you sure?</string>
+    <string name="yes">Yes</string>
+    <string name="zero">0</string>
+    <string name="time_zero">00:00</string>
+    <string name="no">No</string>
+    <string name="done">done!</string>
 
 </resources>
