--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -126,7 +126,7 @@
     <string name="hint_email">hint_email</string>
     <string name="btn_reset_password">btn_reset_password</string>
     <string name="btn_back">btn_back</string>
-    <string name="btn_sign_out">btn_sign_out</string>
+    <string name="sign_out">Sign out</string>
     <string name="remove_user">remove_user</string>
     <string name="send_password_reset_email">send_password_reset_email</string>
     <string name="change_password">change_password</string>
@@ -135,7 +135,7 @@
     <string name="btn_send">btn_send</string>
     <string name="btn_change">btn_change</string>
     <string name="new_pass" translatable="false">new_pass</string>
-    <string name="hint_password">hint_password</string>
+    <string name="hint_password">password</string>
     <string name="hint_new_email">hint_new_email</string>
     <string name="minimum_password">Password should contain at least 6 characters</string>
     <string name="auth_failed">Authentication failed</string>
@@ -183,5 +183,13 @@
     <string name="time_zero">00:00</string>
     <string name="no">No</string>
     <string name="done">done!</string>
+    <string name="email_updated">Email address is updated. Please sign in with new email id!</string>
+    <string name="email_update_failed">Failed to update email!</string>
+    <string name="password_updated">Password is updated, sign in with new password!</string>
+    <string name="password_update_failed">Failed to update password!</string>
+    <string name="profile_deleted">Your profile is deleted:( Create a account now!</string>
+    <string name="deleting_account_failed">Failed to delete your account!</string>
+    <string name="reset_email_sent">Reset password email is sent!</string>
+    <string name="reset_email_failed">Failed to send reset email!</string>
 
 </resources>
