--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="settings">Settings</string>
     <string name="choose_music">Choose your music</string>
     <string name="run_screen">Run!</string>
-    <string name="app_source" translatable="false">intervall.app@android.com</string>
+    <string name="app_source" translatable="false">intervall.app@example.com</string>
 
     <string name="action_lists" translatable="false">Test lists</string>
     <string name="action_board" translatable="false">Test board </string>
